--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "bootstrap": "^5.3.7",
+    "firebase": "^11.9.1",
     "jspdf": "^3.0.1",
     "ngx-spinner": "^19.0.0",
     "rxjs": "~7.8.0",
